@@ -13,6 +13,8 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Dissect syntax change, use * instead of ? when working with field reference. {issue}8054[8054]
+
 *Auditbeat*
 
 - Use `initial_scan` action for new paths. {pull}7954[7954]
